# SKT12-ALDI-ALAM

./: README.md  dwsim.dwxmz
backend/: .env  Cargo.toml
backend/src/: main.rs  serial.rs
