[package]
name = "influxdb-thingsboard-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
env_logger = "0.10"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serialport = "4.3"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# Konfigurasi kunci untuk TLS yang benar:
# 1. Gunakan 'rumqttc' dengan fitur 'use-rustls'.
rumqttc = { version = "0.24", features = ["use-rustls"] }

# 2. Tambahkan 'rustls' sebagai dependensi langsung karena kode kita memanggilnya.
rustls = "0.22"

# 3. Tambahkan 'rustls-native-certs' untuk memuat sertifikat dari OS.
rustls-native-certs = "0.7"

# 4. Tambahkan 'rustls-pki-types' untuk tipe data sertifikat.
rustls-pki-types = "1"